# lang

./: .gitignore
langgraph/langgraph_basics/: 3-langgprah_mutli_tools.ipynb  4-langgraph_mcp.ipynb  simplegraph.ipynb
langgraph/langgraph_basics/langhgraph_uv/: main.py  pyproject.toml  req.txt
langgraph/langgraph_basics/langhgraph_uv/1-basic_chat_bot/: 1_basic.ipynb
langgraph/self_lang/: 1-lang_graph.py  main.py  pyproject.toml
langhchain/ChatModels/: huggginf_face_api.py  hugging_face_local.py  simple.py
langhchain/LLMS/: llmdemo.py
langhchain/Parser_output/: 2str_ouput.py  json_out_par.py  strOutPut.py
langhchain/chains/: 1_chain.py  2_prallel_chains.py  3_condition_chain.py
langhchain/embedding_models/: document_sim.py  embeddding_hf_local.py
langhchain/output_struct/: pydan_out.py  typedict_demo.py  with_str_out.py
langhchain/prompts/: chat_prompt_template.py  chatbot.py  messages.py  prompt.py  prompt_ui.py
pdf_project/: mini_qa_graph.py  test.py
